@@ -1915,6 +1915,8 @@ do_mrs (str, flags)
      char *str;
      unsigned long flags;
 {
+  int skip = 0;
+  
   /* Only one syntax.  */
   skip_whitespace (str);
 
@@ -1937,11 +1939,11 @@ do_mrs (str, flags)
 	 /* Lower case versions for backwards compatability.  */
       || strcmp (str, "cpsr") == 0
       || strcmp (str, "spsr") == 0)
-    str += 4;
+    skip = 4;
   /* This is for backwards compatability with older toolchains.  */
   else if (strcmp (str, "cpsr_all") == 0
 	   || strcmp (str, "spsr_all") == 0)
-    str += 7;
+    skip = 7;
   else
     {
       inst.error = _("{C|S}PSR expected");
@@ -1950,6 +1952,7 @@ do_mrs (str, flags)
 
   if (* str == 's' || * str == 'S')
     inst.instruction |= SPSR_BIT;
+  str += skip;
   
   inst.instruction |= flags;
   end_of_line (str);
