@@ -1,3 +1,7 @@
+2000-06-01  Scott Bambrough <scottb@netwinder.org>
+
+	* config/tc-arm.c (do_mrs): Allow SPSR_BIT to be set correctly.
+
 2000-05-22  David O'Brien  <obrien@FreeBSD.org>
 
 	* configure.in: Recognize alpha-*-freebsd*.
